Added hero level and arts with spells
- added Hero exp and lvl change
- added arts with spells processing (like Tomes and Spellbinder's Hat)
- added "Runes of Imminency" HotA art
- fixed RU spelling of arts according to HotA translation
- added up\down inventory items feature

--- a/Heroes3Editor/Lang/lang-data.fr.json
+++ b/Heroes3Editor/Lang/lang-data.fr.json
@@ -422,6 +422,7 @@
     "Bow of the Sharpshooter": "Arc d'Archer d'Elite",
     "Wizard's Well": "Puits de Mana",
     "Cornucopia": "Manne Céleste",
+    "Runes of Imminency": "Runes of Imminency",
     "Demon's Horseshoe": "Demon's Horseshoe",
     "Shaman's Puppet": "Shaman's Puppet",
     "Golden Goose": "Golden Goose",
@@ -447,7 +448,7 @@
     "Water Walk": "Pont Céleste",
     "Dimension Door": "Portail dimensionnel",
     "Town Portal": "Portail de Retour",
-    "Quick Sand": "Sables Mouvants",
+    "Quicksand": "Sables Mouvants",
     "Land Mine": "Pièges",
     "Force Field": "Champ de Force",
     "Fire Wall": "Mur de Flammes",
@@ -471,7 +472,7 @@
     "Protection from Fire": "Prot. contre le Feu",
     "Protection from Water": "Prot. contre l'Eau",
     "Protection from Earth": "Prot. contre la Terre",
-    "Anti Magic": "Anti-Magie",
+    "Anti-Magic": "Anti-Magie",
     "Dispel": "Dissipation",
     "Magic Mirror": "Réflexion",
     "Cure": "Guérison",
@@ -519,7 +520,7 @@
     "Water Walk": "Permet à votre armée de traverser une étendue d'eau.",
     "Dimension Door": "Une fois par jour, votre Héros peut se déplacer instantanément d'un emplacement à un autre.",
     "Town Portal": "Téléporte votre héros dans la ville alliée la plus proche. La ville doit être inoccupée.",
-    "Quick Sand": "Quatre hexagones aléatoirement choisis se transforment en sables mouvants. Seules les créatures qui combattent dans leur milieu naturel les détectent. Les troupes qui entrent dans un hexagone de sables mouvants sont bloquées pour le reste du tour.",
+    "Quicksand": "Quatre hexagones aléatoirement choisis se transforment en sables mouvants. Seules les créatures qui combattent dans leur milieu naturel les détectent. Les troupes qui entrent dans un hexagone de sables mouvants sont bloquées pour le reste du tour.",
     "Land Mine": "Des pièges sont placés sur quatre hexagones aléatoirement choisis.Seules les créatures qui combattent dans leur milieu naturel les détectent. Toute unité qui pénètre dans un hexagone piégé subit des dégâts.",
     "Force Field": "Un champ de force empêchant tout déplacement sur deux hexagones est créé à l'emplacement indiqué.",
     "Fire Wall": "Un mur de flammes s'étend sur deux hexagones. Toute unité le traversant subit des dégâts.",
@@ -543,7 +544,7 @@
     "Protection from Fire": "Elle réduit les dégâts infligés par les sorts de la magie du Feu contre l'unité visée.",
     "Protection from Water": "Elle réduit les dégâts infligés par les sorts de la magie de l'Eau contre l'unité visée.",
     "Protection from Earth": "Elle réduit les dégâts infligés par les sorts de la magie dela Terre contre l'unité visée.",
-    "Anti Magic": "La troupe visée ne peut être affectée par des sorts de niveau inférieurs au niveau IV.",
+    "Anti-Magic": "La troupe visée ne peut être affectée par des sorts de niveau inférieurs au niveau IV.",
     "Dispel": "Annule tous les sorts lancés sur la troupe alliée visée.",
     "Magic Mirror": "L'unité visée retourne les sorts lancés par l'ennemi. Une partie des dégâts est ainsi renvoyée sur une unité ennemie aléatoirement choisie.",
     "Cure": "Annule tous les effets négatifs des sorts lancés contre la troupe visée et lui restitue des points de vie.",
@@ -566,7 +567,7 @@
     "Slow": "L'unité visée perd des points de mouvement.",
     "Slayer": "L'unité visée voit sa caractéristique d'Attaque augmentée contre les Béhémoths, les Dragons et les Hydres.",
     "Frenzy": "La caractéristique de Défense de l'unité visée est ajoutée à la caractéristique d'Attaque. La défense de l'unité tombe alors à zéro.",
-    "Titan's Lightning Bolt": "Inflige 600 points de dégâts et ne coûte aucun point de magie.",
+    "Titan's Lightning Bolt": "Inflige 600 points de dégâts et ne coûte aucun point de magie. Ajoute un livre de sorts s'il n'y en a pas.",
     "Counterstrike": "La troupe visée peut riposter une fois de plus par tour.",
     "Berserk": "La troupe visée attaque l'unité la plus proche. La frénésie touche également toutes les unités adjacentes à la troupe visée.",
     "Hypnotize": "La troupe ennemie visée tombe sous votre contrôle.",
