--- a/Heroes3Editor/Lang/lang-data.pl.json
+++ b/Heroes3Editor/Lang/lang-data.pl.json
@@ -422,6 +422,7 @@
     "Bow of the Sharpshooter": "Łuk strzelca",
     "Wizard's Well": "Źródło maga",
     "Cornucopia": "Miasto dobrobytu",
+    "Runes of Imminency": "Runes of Imminency",
     "Demon's Horseshoe": "Podkowa demona",
     "Shaman's Puppet": "Lalka szamana",
     "Golden Goose": "Złota gęś",
@@ -447,7 +448,7 @@
     "Water Walk": "Spacer po wodzie",
     "Dimension Door": "Wrota wymiarów",
     "Town Portal": "Miejski portal",
-    "Quick Sand": "Ruchome piaski",
+    "Quicksand": "Ruchome piaski",
     "Land Mine": "Pole minowe",
     "Force Field": "Pole siłowe",
     "Fire Wall": "Ściana ognia",
@@ -471,7 +472,7 @@
     "Protection from Fire": "Ochrona przed ogniem",
     "Protection from Water": "Ochrona przed wodą",
     "Protection from Earth": "Ochrona przed ziemią",
-    "Anti Magic": "Antymagia",
+    "Anti-Magic": "Antymagia",
     "Dispel": "Rozproszenie",
     "Magic Mirror": "Magiczne zwierciadło",
     "Cure": "Uleczenie",
@@ -519,7 +520,7 @@
     "Water Walk": "nPozwala na wykorzystanie części punktów ruchu do chodzenia po wodzie.",
     "Dimension Door": "Raz dziennie możesz teleportować swojego bohatera wraz z jego armią do widocznego, wolnego miejsca na mapie.",
     "Town Portal": "Teleportuje bohatera do najbliższego należącego do niego miasta.",
-    "Quick Sand": "Zaklęcie tworzy losowo na polu bitwy cztery obszary pokryte ruchomymi piaskami. Obszary te widoczne są tylko dla gracza, który je utworzył i właściwych dla danego terenu oddziałów. Oddział, który wpadnie w ruchome piaski, nie może się poruszać do rozpoczęcia następnej kolejki.",
+    "Quicksand": "Zaklęcie tworzy losowo na polu bitwy cztery obszary pokryte ruchomymi piaskami. Obszary te widoczne są tylko dla gracza, który je utworzył i właściwych dla danego terenu oddziałów. Oddział, który wpadnie w ruchome piaski, nie może się poruszać do rozpoczęcia następnej kolejki.",
     "Land Mine": "Zaklęcie tworzy losowo na polu bitwy cztery pola minowe widoczne tylko dla gracza i właściwych dla danego terenu oddziałów. Każdy oddział, który wejdzie na miny, powoduje ich wybuch.",
     "Force Field": "W miejscu wskazanym przez gracza tworzy małej wielkości pole siłowe na polu bitwy, nie pozwalające na przejście wrogim oddziałom.",
     "Fire Wall": "W miejscu wskazanym przez gracza tworzy małą ścianę ognia na polu bitwy, która rani oddziały próbujące ją pokonać.",
@@ -542,7 +543,7 @@
     "Protection from Fire": "Chroni wybrany oddział zmniejszając obrażenia zadawane przez zaklęcia oparte na magii ognia.",
     "Protection from Water": "Chroni wybrany oddział zmniejszając obrażenia zadawane przez zaklęcia oparte na magii wody.",
     "Protection from Earth": "Chroni wybrany oddział zmniejszając obrażenia zadawane przez zaklęcia oparte na magii ziemi.",
-    "Anti Magic": "Chroni oddział przed zaklęciami niskich poziomów.",
+    "Anti-Magic": "Chroni oddział przed zaklęciami niskich poziomów.",
     "Dispel": "Usuwa działanie wszystkich czarów, pod których wpływem znajduje się własny oddział.",
     "Magic Mirror": "Odwraca działanie wrogich zaklęć odsyłając je w kierunku losowej jednostki wroga.",
     "Cure": "Usuwa działanie wszystkich negatywnych zaklęć oraz regeneruje część punktów życia wybranego oddziału.",
@@ -565,7 +566,7 @@
     "Slow": "Zmniejsza szybkość  (zasięg) wybranego oddziału wroga.",
     "Slayer": "Zwiększa siłę ataku wybranego oddziału podczas walki ze smokami, behemotami i hydrami.",
     "Frenzy": "Zmniejsza skuteczność obrony wybranego oddziału zwiększając równocześnie siłę jego ataku.",
-    "Titan's Lightning Bolt": "Zadaje 600 punktów obrażeń. nie kosztuje nic tego, kto je rzuca.",
+    "Titan's Lightning Bolt": "Zadaje 600 punktów obrażeń. nie kosztuje nic tego, kto je rzuca. Dodaje Księgę Zaklęć, jeśli jej nie ma.",
     "Counterstrike": "Wybrany oddział będzie miał szansę wykonać jeden kontratak więcej na turę.",
     "Berserk": "Oddział zaatakuje losowy wybrany najbliższy oddział, nieważne czyj.",
     "Hypnotize": "Pozwala ci czasowo sprawować kontrolę nad wrogim oddziałem.",
