--- a/Heroes3Editor/Lang/lang-data.ru.json
+++ b/Heroes3Editor/Lang/lang-data.ru.json
@@ -331,6 +331,19 @@
   },
   "Weapons": {
     "-": "-",
+    "Centaur's Axe": "Топор кентавра",
+    "Blackshard of the Dead Knight": "Черный меч мертвого рыцаря",
+    "Greater Gnoll's Flail": "Боевой цеп гнолла",
+    "Ogre's Club of Havoc": "Огрова дубина разрушения",
+    "Sword of Hellfire": "Меч адского пламени",
+    "Titan's Gladius": "Боевой меч титана",
+    "Sword of Judgement": "Мечь правосудия",
+    "Red Dragon Flame Tongue": "Огненный язык красного дракона",
+    "Armageddon's Blade": "Клинок Армагеддона",
+    "Angelic Alliance": "Ангельский союз",
+    "Titan's Thunder": "Гром титана"
+  },
+  "HotaWeapons": {
     "Centaur's Axe": "Секира Кентавра",
     "Blackshard of the Dead Knight": "Клинок Мёртвого Рыцаря",
     "Greater Gnoll's Flail": "Кистень Великого Гнолла",
@@ -339,7 +352,6 @@
     "Titan's Gladius": "Гладиус Титана",
     "Sword of Judgement": "Мечь Правосудия",
     "Red Dragon Flame Tongue": "Языки Пламени Красного Дракона",
-    "Armageddon's Blade": "Клинок Армагеддона",
     "Angelic Alliance": "Альянс Ангелов",
     "Titan's Thunder": "Грохот Титана",
     "Ironfist of the Ogre": "Железный Кулак Огра",
@@ -347,6 +359,16 @@
   },
   "Shields": {
     "-": "-",
+    "Shield of the Dwarven Lords": "Щит королей гномов",
+    "Shield of the Yawning Dead": "Щит неупокоенных",
+    "Buckler of the Gnoll King": "Щит короля гноллов",
+    "Targ of the Rampaging Ogre": "Щит неистового огра",
+    "Shield of the Damned": "Щит проклятых",
+    "Sentinel's Shield": "Щит часового",
+    "Lion's Shield of Courage": "Щит львиной храбрости",
+    "Dragon Scale Shield": "Щит дракона"
+  },
+  "HotaShields": {
     "Shield of the Dwarven Lords": "Щит Владыки Гномов",
     "Shield of the Yawning Dead": "Щит Тоскующих Мертвецов",
     "Buckler of the Gnoll King": "Щит Короля Гноллов",
@@ -359,9 +381,21 @@
   },
   "Helms": {
     "-": "-",
+    "Helm of the Alabaster Unicorn": "Шлем белого единорога",
+    "Skull Helmet": "Шлем-череп",
+    "Helm of Chaos": "Шлем Хаоса",
+    "Crown of the Supreme Magi": "Корона верховного мага",
+    "Hellstorm Helmet": "Шлем адской бури",
+    "Thunder Helmet": "Громовой шлем",
+    "Helm of Heavenly Enlightenment": "Шлем небесного просветления",
+    "Crown of Dragontooth": "Корона дракона",
+    "Sea Captain's Hat": "Шляпа капитана",
+    "Spellbinder's Hat": "Шляпа заклинателя",
+    "Admiral's Hat": "Шляпа адмирала"
+  },
+  "HotaHelms": {
     "Helm of the Alabaster Unicorn": "Шлем Белого Единорога",
     "Skull Helmet": "Шлем-Череп",
-    "Helm of Chaos": "Шлем Хаоса",
     "Crown of the Supreme Magi": "Корона Великого Колдуна",
     "Hellstorm Helmet": "Шлем Бушующего Пекла",
     "Thunder Helmet": "Шлем Небесного Грома",
@@ -375,6 +409,19 @@
   },
   "Armor": {
     "-": "-",
+    "Breastplate of Petrified Wood": "Доспехи из окаменевшего дерева",
+    "Rib Cage": "Каркас",
+    "Scales of the Greater Basilisk": "Чешуя большого василиска",
+    "Tunic of the Cyclops King": "Туника короля циклопов",
+    "Breastplate of Brimstone": "Доспехи самородной серы",
+    "Titan's Cuirass": "Кираса титана",
+    "Armor of Wonder": "Дивный доспех",
+    "Dragon Scale Armor": "Доспехи черного дракона",
+    "Surcoat of Counterpoise": "Плащ равновесия",
+    "Armor of the Damned": "Доспех проклятого",
+    "Power of the Dragon Father": "Сила Отца драконов"
+  },
+  "HotaArmor": {
     "Breastplate of Petrified Wood": "Нагрудник из Окаменелого Дерева",
     "Rib Cage": "Рёбра",
     "Scales of the Greater Basilisk": "Чешуйчатый Доспех Василиска",
@@ -391,6 +438,17 @@
   },
   "Cloak": {
     "-": "-",
+    "Dragon Wing Tabard": "Плащ из крыла дракона",
+    "Vampire's Cowl": "Плащ вампира",
+    "Ambassador's Sash": "Лента посла",
+    "Angel Wings": "Крылья ангела",
+    "Cape of Conjuring": "Накидка заклинателя",
+    "Recanter's Cloak": "Накидка отречения",
+    "Cape of Velocity": "Накидка скорости",
+    "Everflowing Crystal Cloak": "Изобильная накидка кристаллов",
+    "Cloak of Undead King": "Накидка Мертвого короля"
+  },
+  "HotaCloak": {
     "Dragon Wing Tabard": "Плащ из Драконьих Крыльев",
     "Vampire's Cowl": "Сутана Вампира",
     "Ambassador's Sash": "Лента Посла",
@@ -405,6 +463,14 @@
   },
   "Boots": {
     "-": "-",
+    "Sandal's of the Saint": "Сандалии святого",
+    "Dragonbone Greaves": "Поножи из кости дракона",
+    "Dead Man's Boots": "Башмаки мертвеца",
+    "Boots of Polarity": "Башмаки полярности",
+    "Boots of Levitation": "Башмаки левитации",
+    "Boots of Speed": "Башмаки скороходы"
+  },
+  "HotaBoots": {
     "Sandal's of the Saint": "Сандалии Святого",
     "Dragonbone Greaves": "Наголенники из Драконьей Кости",
     "Dead Man's Boots": "Сапоги Мертвеца",
@@ -415,6 +481,24 @@
   },
   "Neck": {
     "-": "-",
+    "Celestial Necklace of Bliss": "Ожерелье небесного блаженства",
+    "Necklace of Dragonteeth": "Ожерелье из зубов дракона",
+    "Amulet of the Undertaker": "Амулет некроманта",
+    "Garniture of Interference": "Наследный доспех",
+    "Necklace of Ocean Guidance": "Ожерелье навигатора",
+    "Collar of Conjuring": "Колье заклинателя",
+    "Necklace of Swiftness": "Ожерелье скорости",
+    "Pendant of Dispassion": "Кулон бесстрастия",
+    "Pendant of Second Sight": "Кулон внутреннего зрения",
+    "Pendant of Holiness": "Кулон святости",
+    "Pendant of Life": "Кулон жизни",
+    "Pendant of Death": "Кулон смерти",
+    "Pendant of Free Will": "Кулон свободной воли",
+    "Pendant of Negativity": "Кулон отрицания",
+    "Pendant of Total Recall": "Кулон твердой памяти",
+    "Pendant of Courage": "Кулон мужества"
+  },
+  "HotaNeck": {
     "Celestial Necklace of Bliss": "Ожерелье Небесной Благодати",
     "Necklace of Dragonteeth": "Ожерелье из Зубов Дракона",
     "Amulet of the Undertaker": "Амулет Гробовщика",
@@ -436,6 +520,19 @@
   },
   "Rings": {
     "-": "-",
+    "Quiet Eye of the Dragon": "Безмолвный глаз дракона",
+    "Still Eye of the Dragon": "Неподвижный глаз дракона",
+    "Diplomat's Ring": "Кольцо дипломата",
+    "Ring of the Wayfarer": "Кольцо странника",
+    "Equestrian's Gloves": "Перчатки всадника",
+    "Ring of Conjuring": "Кольцо заклинателя",
+    "Ring of Vitality": "Кольцо здоровья",
+    "Ring of Life": "Кольцо жизни",
+    "Ring of Infinite Gems": "Нескончаемое кольцо самоцветов",
+    "Eversmoking Ring of Sulfur": "Неиссякаемое кольцо серы",
+    "Ring of the Magi": "Кольцо мага"
+  },
+  "HotaRings": {
     "Quiet Eye of the Dragon": "Неподвижный Глаз Дракона",
     "Still Eye of the Dragon": "Застывший Глаз Дракона",
     "Diplomat's Ring": "Кольцо Дипломата",
@@ -453,6 +550,59 @@
   },
   "Items": {
     "-": "-",
+    "Spell Scroll": "Волшебный свиток",
+    "Clover of Fortune": "Клевер Фортуны",
+    "Cards of Prophecy": "Карты пророчества",
+    "Ladybird of Luck": "Птица счастья",
+    "Badge of Courage": "Знак мужества",
+    "Crest of Valor": "Крест отваги",
+    "Glyph of Gallantry": "Глиф доблести",
+    "Speculum": "Телескоп",
+    "Spyglass": "Подзорная труба",
+    "Bow of Elven Cherrywood": "Эльфийский лук из вишневого дерева",
+    "Bowstring of the Unicorns's Mane": "Тетива из гривы единорога",
+    "Angel Feather Arrows": "Стрелы с перьями ангела",
+    "Bird of Perception": "Птица проницательности",
+    "Stoic Watchman": "Стойкий часовой",
+    "Emblem of Cognizance": "Символ знания",
+    "Statesman's Medal": "Медаль чиновника",
+    "Charm of Mana": "Амулет маны",
+    "Talisman of Mana": "Талисман маны",
+    "Mystic Orb of Mana": "Волшебная сфера маны",
+    "Orb of Firmament": "Сфера небесного свода",
+    "Orb of Silt": "Сфера тверди земной",
+    "Orb of Tempestuous Fire": "Сфера буйного пламени",
+    "Orb of Driving Rain": "Сфера проливного дождя",
+    "Spirit of Oppression": "Дух угнетения",
+    "Hourglass of the Evil Hour": "Часы недоброго часа",
+    "Tome of Fire Magic": "Книга магии Огня",
+    "Tome of Air Magic": "Книга магии Воздуха",
+    "Tome of Water Magic": "Книга магии Воды",
+    "Tome of Earth Magic": "Книга магии Земли",
+    "Golden Bow": "Золотой лук",
+    "Sphere of Permanence": "Сфера постоянства",
+    "Orb of Vulnerability": "Сфера уязвимости",
+    "Vial of Lifeblood": "Сосуд с кровью жизни",
+    "Everpouring Vial of Mercury": "Бездонный сосуд ртути",
+    "Inexhaustible Cart of Ore": "Неисчерпаемая вагонетка руды",
+    "Inexhaustible Cart of Lumber": "Бесконечная повозка дров",
+    "Endless Sack of Gold": "Бездонный мешок золота",
+    "Endless Bag of Gold": "Бездонная сума золота",
+    "Endless Purse of Gold": "Бездонный кошель золота",
+    "Legs of Legion": "Ноги Легионера",
+    "Loins of Legion": "Поясница Легионера",
+    "Torso of Legion": "Туловище Легионера",
+    "Arms of Legion": "Руки Легионера",
+    "Head of Legion": "Голова Легионера",
+    "Shackles of War": "Оковы войны",
+    "Orb of Inhibition": "Сфера подавления",
+    "Elixir of Life": "Фиал с кровью жизни",
+    "Statue of Legion": "Статуя Легионера",
+    "Bow of the Sharpshooter": "Лук снайпера",
+    "Wizard's Well": "Источник чародея",
+    "Cornucopia": "Рог изобилия"
+  },
+  "HotaItems": {
     "Spell Scroll": "Свиток с Заклинанием",
     "Clover of Fortune": "Клевер Удачи",
     "Cards of Prophecy": "Карты Пророчества",
@@ -504,6 +654,7 @@
     "Bow of the Sharpshooter": "Лук Снайпера",
     "Wizard's Well": "Колодец Волшебника",
     "Cornucopia": "Рог Изобилия",
+    "Runes of Imminency": "Руны Неизбежности",
     "Demon's Horseshoe": "Подкова Демона",
     "Shaman's Puppet": "Кукла Шамана",
     "Golden Goose": "Золотой Гусь",
@@ -529,7 +680,7 @@
     "Water Walk": "Хождение по Воде",
     "Dimension Door": "Дверь Измерений",
     "Town Portal": "Городской Портал",
-    "Quick Sand": "Зыбучие Пески",
+    "Quicksand": "Зыбучие Пески",
     "Land Mine": "Минное Поле",
     "Force Field": "Силовое Поле",
     "Fire Wall": "Стена Огня",
@@ -553,7 +704,7 @@
     "Protection from Fire": "Защита от Огня",
     "Protection from Water": "Защита от Воды",
     "Protection from Earth": "Защита от Земли",
-    "Anti Magic": "Антимагия",
+    "Anti-Magic": "Антимагия",
     "Dispel": "Снятие Заклинаний",
     "Magic Mirror": "Волшебное Зеркало",
     "Cure": "Лечение",
@@ -601,7 +752,7 @@
     "Water Walk": "Позволяет колдующему преодолевать водные препятствия.",
     "Dimension Door": "Телепортирует колдующего на незанятый участок на карте в зоне видимости героя.",
     "Town Portal": "Телепортирует колдующего в ближайший дружественный город.",
-    "Quick Sand": "Случайным образом размещает на поле битвы участки зыбучего песка, видимые только тому, кто направил заклинание, а также существам, для которых данный тип местности является родным.",
+    "Quicksand": "Случайным образом размещает на поле битвы участки зыбучего песка, видимые только тому, кто направил заклинание, а также существам, для которых данный тип местности является родным.",
     "Land Mine": "Случайным образом размещает на поле битвы мины, видимые только тому, кто направил заклинание, а также существам, для которых данный тип местности является родным.",
     "Force Field": "Помещает в выбранное место силовое поле. Передвижение через эти клетки становится невозможным.",
     "Fire Wall": "Размещает огненную стену в указанном месте. Любой отряд, проходящий через эту стену получает повреждения.",
@@ -612,7 +763,7 @@
     "Implosion": "Причиняет урон выбранному вражескому отряду. Не действует на боевые машины.",
     "Chain Lightning": "В выбранный вражеский отряд, нанося урон, ударяет молния, которая затем переходит на ближайший отряд, причиняя половину урона, затем на следующий отряд, причиняя четверть от начального урона, и так далее. Поражает четыре отряда.",
     "Frost Ring": "Наносит урон льдом всем отрядам на клетках, соседствующих с целевой. Сама целевая клетка не подвергается действию заклинания.",
-    "Fireball": "На выбранный отряд обрушивается огненный шар, причиняя урон цели, а также все отрядам на клетках, соседствующих с целевой.",
+    "Fireball": "На выбранный отряд обрушивается огненный шар, причиняя урон цели, а также всем отрядам на клетках, соседствующих с целевой.",
     "Inferno": "Огромный взрыв поражает выбранную цель и все клетки на расстоянии 1 и 2 от целевой огнём. Держись подальше, когда это случится!",
     "Meteor Shower": "Обрушивает на выбранный отряд и соседние клетки метеоритный дождь.",
     "Death Ripple": "Посылает волну смерти по всему полю битвы, которая причиняет урон всем существам, кроме нежити и боевых машин.",
@@ -625,7 +776,7 @@
     "Protection from Fire": "Защищает дружественный отряд, уменьшая повреждения от заклинаний Огня.",
     "Protection from Water": "Защищает дружественный отряд, уменьшая повреждения от заклинаний Воды.",
     "Protection from Earth": "Защищает дружественный отряд, уменьшая повреждения от заклинаний Земли.",
-    "Anti Magic": "Защищает дружественный отряд от всех заклинаний, кроме Снятия Заклинаний, снимая при этом уже наложенные негативные заклинания, кроме Разрушающего Луча. Не действует на копии, созданные заклинанием Клон.",
+    "Anti-Magic": "Защищает дружественный отряд от всех заклинаний, кроме Снятия Заклинаний, снимая при этом уже наложенные негативные заклинания, кроме Разрушающего Луча. Не действует на копии, созданные заклинанием Клон.",
     "Dispel": "Снимает все заклинания и эффекты, кроме Разрушающего Луча и яда, с дружественного отряда. Игнорирует врождённые иммунитеты к магии цели.",
     "Magic Mirror": "Отражает враждебные заклинания от выбранного дружественного отряда в случайно выбранного врага. Защищает от Гипноза.",
     "Cure": "Снимает с выбранного дружественного отряда все негативные заклинания и эффекты, кроме Разрушающего Луча и связывающих пут дендроидов, а также излечивает. Восстанавливает отнятое ядом здоровье.",
@@ -648,7 +799,7 @@
     "Slow": "Уменьшает скорость выбранного вражеского отряда. Снимает эффект Ускорения.",
     "Slayer": "Увеличивает силу атаки выбранного дружественного отряда против драконов, чудищ, гидр, огненных птиц, морских змеев и коатлей.",
     "Frenzy": "Заклинание разума. Выбранный дружественный отряд осознанно снижает свою защиту до 0, чтобы увеличить ярость своей атаки. Сила атаки увеличивается настолько же, насколько уменьшилась защита отряда.",
-    "Titan's Lightning Bolt": "Наносит 600 единиц урона выбранному вражескому отряду и не требует затрат маны. Требуется артефакт Грохот Титана.",
+    "Titan's Lightning Bolt": "Наносит 600 единиц урона выбранному вражескому отряду и не требует затрат маны. Требуется артефакт Грохот Титана. Добавляет книгу заклинаний, если её нет.",
     "Counterstrike": "Выбранный дружественный отряд немедленно получает дополнительную атаку и будет получать дополнительную ответную атаку в начале каждого раунда.",
     "Berserk": "Заклинание разума. Выбранный отряд будет случайно атаковать ближайший к нему отряд, будь то враг или друг. Цель теряет эффект гипноза. Заклинание действует пока цель не совершит атаку, в противном случае длительность заклинания не ограничена.",
     "Hypnotize": "Заклинание разума. Временно передаёт вам управление выбранным вражеским отрядом. Снимает эффект Берсерка.",
@@ -755,6 +906,7 @@
     "Pendant of Reflection": "Составной артефакт: В дополнение к эффектам отдельных компонентов увеличивает шанс сопротивляться вражескому заклинанию в бою на 20%",
     "Ironfist of the Ogre": "Составной артефакт: В начале боя накладывает на все дружественные отряды на 50 раундов заклинания Ускорение, Жажда Крови, Огненный щит и Контрудар экспертной ступени.",
     "Wayfarer's Boots": "Позволяют перемещаться по любой местности без штрафов",
+    "Runes of Imminency": "Уменьшает удачу отрядов противника на 1",
     "Demon's Horseshoe": "Уменьшает удачу отрядов противника на 1",
     "Shaman's Puppet": "Уменьшает удачу отрядов противника на 2",
     "Hideous Mask": "Уменьшает боевой дух отрядов противника на 1",
